--- a/.github/workflows/train.yml
+++ b/.github/workflows/train.yml
@@ -7,10 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
     
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4
       with:
         python-version: '3.8'
         
@@ -18,19 +18,26 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install torch torchvision
+        pip install torchsummary
+        
+    - name: Check model architecture
+      run: |
+        python test_model.py
         
     - name: Train model
       run: |
         python train.py
         
     - name: Upload training logs
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: training-logs
         path: training.log
+        retention-days: 90
         
     - name: Upload best model
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: best-model
-        path: best_model.pth 
+        path: best_model.pth
+        retention-days: 90 
