--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,47 @@
+# Virtual Environment
 venv/
+env/
+
+# Python
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
 .Python
-*.log 
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Data and Models
+data/
+*.pth
+*.pt
+*.pkl
+*.h5
+
+# Logs
+*.log
+logs/
+training.log
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# OS
+.DS_Store
+.env 
